--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
     <title>About Me with a guessing game</title>
+    <!--link my css -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <header>
         <nav>
-            
+            <!--add My personal picture -->
             <img src="img/me.jpg" alt="description" height="200" width="200" />
 
         </nav>
@@ -32,10 +33,11 @@
     <footer>
         <nav>
 
-            all rights are reserved&copy;
+           <h2> all rights are reserved&copy; </h2>
             
         </nav>
     </footer>
+    <!--link my js -->
     <script src="js/app.js"></script>
 </body>
 </html>
